--- a/kurta.html
+++ b/kurta.html
@@ -15,7 +15,7 @@
         <div class="nav-main">
             <div class="row">
                 <div class="col-sm-4"></div>
-                <div class="col-sm-4 logo"><a href="home.html"><img src="CLASSY_500_x_100_px_500_x_200_px_500_x_150_px_1_140x.png" alt="classy-vouge image"></a></div>
+                <div class="col-sm-4 logo"><a href="index.html"><img src="CLASSY_500_x_100_px_500_x_200_px_500_x_150_px_1_140x.png" alt="classy-vouge image"></a></div>
                 <div class="col-sm-2"></div>
                 <div  class="col-sm-2 ">
                     <button class="btn" type="button"><i class="fa-solid fa-user fa-lg  icon"></i></button>
@@ -171,7 +171,7 @@
         </div>
         <div> <br><br><br>
           <div class="paginations">
-            <a href="home.html" class="page " >&laquo;</a>
+            <a href="index.html" class="page " >&laquo;</a>
             <a href="newarrivals.html" class="page">1</a>
             <a href="ALLSHIRTS.HTML" class="page">2</a>
             <a href="kurta.html" class="page active">3</a>
