--- a/3phase/1.html
+++ b/3phase/1.html
@@ -15,7 +15,7 @@
         <div class="nav-main text">
             <div class="row">
                 <div class="col-sm-4"></div>
-                <div class="col-sm-4 logo"><a href="home.html"><img src="CLASSY_500_x_100_px_500_x_200_px_500_x_150_px_1_140x.png" alt="classy-vouge image"></a></div>
+                <div class="col-sm-4 logo"><a href="index.html"><img src="CLASSY_500_x_100_px_500_x_200_px_500_x_150_px_1_140x.png" alt="classy-vouge image"></a></div>
                 <div class="col-sm-2"></div>
                 <div  class="col-sm-2 ">
                     <button class="btn" type="button"><i class="fa-solid fa-user fa-lg  icon"></i></button>
