--- a/premium.html
+++ b/premium.html
@@ -8,7 +8,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Premium Shirt's</title>
- <link rel="stylesheet" href="2.css">
+ <link rel="stylesheet" href="2.CSS">
 </head>
 <body>
     <div class="container-fluid text">
